# webServPP

./: CMakeLists.txt  readme.txt
src/: Request.cpp  Webserver.cpp  Webserver.hpp  main.cpp
src/Webserver/: Cookie.cpp  Cookie.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Webserver.cpp  Webserver.hpp
src/Webserver/apps/: App.cpp  App.hpp  TestApp.cpp  TestApp.hpp
src/Webserver/middlewares/: Middleware.hpp
src/static/: test.css  test.js
src/templates/: test.html  test.tmpl.html
src/webserver/: AuthenticationService.cpp  AuthenticationService.hpp  CallbackHandler.hpp  Cookie.cpp  Cookie.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Session.cpp  Session.hpp  Webserver.cpp  Webserver.hpp
src/webserver/apps/: App.cpp  App.hpp  DirectApp.cpp  DirectApp.hpp  TestApp.cpp  TestApp.hpp
src/webserver/authentication/: AuthenticationService.cpp  AuthenticationService.hpp
src/webserver/middlewares/: LoggingMiddleware.cpp  LoggingMiddleware.hpp  Middleware.hpp  SessionMiddleware.cpp  SessionMiddleware.hpp
src/webserver/util/: CryptoThreadSetup.hpp  RequestChecker.cpp  RequestChecker.hpp  Statuscodes.cpp  Statuscodes.hpp  UUID4Generator.hpp  UUIDGenerator.cpp  Util.hpp
